# ofd

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bfd.cpp  ifd.cpp  sfd.cpp  webcam.cpp
